--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hot-toast": "^2.4.1",
+    "stripe": "^14.1.0",
     "tailwind-merge": "^1.14.0",
     "zustand": "^4.4.3"
   },
